syntax = "proto3";

package user;

message TokenRequest {
  string token = 1;
}

message TokenResponse {
  bool isValid = 1;
  string userId = 2;
}

service UserService {
  rpc validate(TokenRequest) returns (TokenResponse);
}


// /home/admin185/Desktop/grpc_micro/user_service/src/proto/user/user.proto
// /home/admin185/Desktop/grpc_micro/user_service/dist